--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -19,6 +19,9 @@ android {
     namespace = 'org.firstinspires.ftc.teamcode'
 
     packagingOptions {
+        jniLibs {
+            pickFirsts += ['**/*.so']
+        }
         jniLibs.useLegacyPackaging true
     }
 }
@@ -37,6 +40,7 @@ dependencies {
     implementation "com.acmerobotics.dashboard:dashboard:0.4.16"
     implementation 'org.ftclib.ftclib:core:2.1.1'
     implementation 'com.github.Eeshwar-Krishnan:PhotonFTC:v3.0.3-ALPHA'
+    implementation 'org.ftclib.ftclib:core:2.1.1'
 }
 
 
