--- a/build.dependencies.gradle
+++ b/build.dependencies.gradle
@@ -13,6 +13,7 @@ dependencies {
     implementation 'org.firstinspires.ftc:Hardware:10.1.1'
     implementation 'org.firstinspires.ftc:FtcCommon:10.1.1'
     implementation 'org.firstinspires.ftc:Vision:10.1.1'
+    //noinspection GradleDependency
     implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'com.github.StateFactory-Dev:StateFactory:0.3.6'
+    implementation 'com.github.StateFactory-Dev:StateFactory:0.3.7'
 }
